feature/errorBoundryPwa: error boundry added and PWA setup

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "HyGenie",
+  "name": "HyGenie : Staf Home Stay Safe",
   "icons": [
     {
       "src": "favicon.ico",
