--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "eslint-plugin-prettier": "^3.4.0",
     "firebase": "^8.6.7",
     "husky": "^6.0.0",
+    "i18next": "^20.3.2",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-xhr-backend": "^3.2.2",
     "node-sass": "^6.0.0",
     "prettier": "^2.3.1",
     "pretty-quick": "^3.1.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.0",
     "react-notify-toast": "^0.5.1",
     "react-responsive-modal": "^6.1.0",
     "react-router-dom": "^5.2.0",
