--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick &&  npm test --staged",
-      "pre-push": "pretty-quick --staged && npm test"
+      "pre-commit": "pretty-quick --staged && npm test",
+      "pre-push": "npm test"
     }
   },
   "devDependencies": {
