--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick && npm test",
+      "pre-commit": "echo \"[Husky] pre-commit\"",
       "pre-push": "npm test"
     }
   },
