--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "antd": "^4.16.3",
     "eslint-plugin-prettier": "^3.4.0",
     "firebase": "^8.6.7",
-    "husky": "^6.0.0",
     "node-sass": "^6.0.0",
     "prettier": "^2.3.1",
     "pretty-quick": "^3.1.1",
@@ -54,6 +53,7 @@
     }
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "husky": "^7.0.0"
   }
 }
