--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,7 +25,8 @@
     {
       "src": "icon-192x192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-256x256.png",
