--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 
@@ -10,8 +11,10 @@
 
 # production
 /build
+/client/build
 
 # misc
+.vscode
 .DS_Store
 .env.local
 .env.development.local
