--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [build]	
-    command = "yarn build"
-    build = "build"
+    base = "client/"
+    publish = "build/"
+    command = "npm run build"
 
